client/src/Components/Meme/Meme.scss
@import '../../Styles/variables';

.meme {
  &__author {
    &-avatar {
      padding: 0 1rem 0 1.5rem;

      img {
        width: auto;
        height: 51px;
      }
    }
  }
  &__title {
    font-size: 2.4rem;

    a {
      text-decoration: none;
      font-weight: 600;
    }
  }
  &__image {
    background-color: $background_bright;

    img {
      max-width: 100%;
    }
  }
  &__label {
    border-top: 3px solid;
    &.security_1 {
      border-color: $color_primary;

      span {
        background-color: $color_primary;
      }
    }
    &.security_2 {
      border-color: $color_danger;

      span {
        background-color: $color_danger;
      }
    }

    span {
      padding: 3px 8px;
      font-weight: bold;
    }
  }
  &__reactions {
    margin-top: 5px;
  }
  &__stonkser {
    &:not(:last-child):after {
      content: ', ';
    }
  }
  &__tag {
    background-color: $color_danger;
    padding: 6px 8px 5px;
    display: inline-block;
    margin-left: 10px;
  }
}

